# topogram

./: .env.example  LICENSE  README.md  cleanup_aws_icons.py  docker-compose.yml
client/: .dockerignore  .env.example  .firebaserc  .forcebuild  .gitignore  Dockerfile  REDUX_SETUP.md  nginx.conf  package-lock.json  package.json  vite.config.ts
client-old/: RESIZE_FEATURE.md  SHAPE_IMPLEMENTATION_SUMMARY.md  SHAPE_SYSTEM.md  package.json
diagram-rendering-engine/: pom.xml
mermaid-parser/: Dockerfile  package-lock.json  package.json  tsconfig.json
process-icons/: cleanup_aws_icons.py  generate_icons_json.py
rendering-engine/: .dockerignore  (+4 more)
server/: .dockerignore  .env.example  .forcebuild  .gitignore  Dockerfile  Dockerfile.lambda  README.md  lambda_handler.py  pyproject.toml  reproduce_rate_limit.py  test.excalidraw  test.json  test2.json
server/app/: main.py
server/app/agents/elk_input_graph_generator_agent/: agent.py  chat_models.py  prompts.py  schemas.py  tools.py
server/app/api/: deps.py
server/app/api/v1/: __init__.py
server/app/api/v1/endpoints/: chat.py  diagrams.py
server/app/api/v1/schemas/: chat.py
server/app/assets/: aws_icons.json
server/app/config/: settings.py
server/app/constants/: diagrams.py
server/app/core/: rate_limit.py
server/app/db/: models.py
server/app/db/repositories/: chat_repository.py
server/app/exceptions/: diagrams.py
server/app/schemas/: diagrams.py
server/app/services/: chart_service.py  chat_service.py  diagram_service.py
server/app/utils/: auth.py  serialize_checkpoint.py
server/utils/: auth.py
(+39 files in other folders)
