[project]
name = "diagram-copilot-server"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.128.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.28.1",
    "langchain[google-genai]>=1.2.6",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
