[project]
name = "diagram-copilot-server"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.28.1",
    "langchain[google-genai]>=1.2.6",
    "langfuse>=3.12.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "mangum>=0.17.0",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "langchain-openai>=1.1.10",
    "langchain-cerebras>=0.8.2",
]
